--- a/index.html
+++ b/index.html
@@ -525,7 +525,112 @@
             </li>
           </ul>
         </div>
+        <div class="container-form">
+          <p class="footer-subtitle">Subscribe</p>
+          <form class="footer-form" name="Subscribe" autocomplete="off">
+            <label class="label-form">
+              <input
+                class="e-maill-form"
+                type="email"
+                name="e-maill"
+                placeholder="E-mail"
+              />
+            </label>
+
+            <button class="form_button" type="submit">
+              Subscribe
+              <svg class="icon_form" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button type="button" class="modal-button-close">
+          <svg class="modal-icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+
+        <p class="modal-subtitle">
+          Leave your contacts and we will call you back
+        </p>
+        <form
+          class="modal-form"
+          action="model-page"
+          novalidate
+          autocomplete="off"
+        >
+          <div class="modal-container">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-container">
+            <label class="modal-label" for="phone">Phone</label>
+            <div class="modal-input-wrap">
+              <input class="modal-input" type="tel" name="phone" id="phone" />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-container">
+            <label class="modal-label" for="e-maill">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="email"
+                name="e-maill"
+                id="e-maill"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-comment">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-textarea"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="container-chekbox">
+            <input
+              class="checkbox_button visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
+            <label for="user-privacy" class="user-privacy">
+              <span class="privacy_button">
+                <svg class="icon_checbox" width="10" height="8">
+                  <use href="./images/icons.svg#icon-accept"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="privacy_policy_paragraf">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="model_button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
